# SDL3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml  test.yml
android/: build.sh
tools/: build.sh  changelog.sh  common.sh  download.sh  latest.sh  sums.sh  vars.sh
unix/: build.sh  freebsd-deps.sh  linux-deps.sh  omnios-deps.sh  openbsd-deps.sh  sdl2.cmake
windows/: 0001-fix-arm.patch  build.sh  sdl2.cmake
